package com.halilkrkn.notesapp.feature_note.presentation

import androidx.activity.compose.setContent
import androidx.compose.animation.ExperimentalAnimationApi
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertTextContains
import androidx.compose.ui.test.assertTextEquals
import androidx.compose.ui.test.junit4.createAndroidComposeRule
import androidx.compose.ui.test.onAllNodesWithContentDescription
import androidx.compose.ui.test.onAllNodesWithTag
import androidx.compose.ui.test.onNodeWithContentDescription
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performTextInput
import androidx.navigation.NavType
import androidx.navigation.compose.NavHost
import androidx.navigation.compose.composable
import androidx.navigation.compose.rememberNavController
import androidx.navigation.navArgument
import com.halilkrkn.notesapp.core.util.TestTags
import com.halilkrkn.notesapp.feature_note.presentation.add_edit_note.AddEditNoteScreen
import com.halilkrkn.notesapp.feature_note.presentation.notes.NotesScreen
import com.halilkrkn.notesapp.feature_note.presentation.util.Screen
import com.halilkrkn.notesapp.ui.theme.JetpackCompose_NotesAppTheme
import dagger.hilt.android.testing.HiltAndroidRule
import dagger.hilt.android.testing.HiltAndroidTest
import org.junit.Before
import org.junit.Rule
import org.junit.Test

@HiltAndroidTest
class NoteEndToEndTest {

    @get:Rule(order = 0)
    var hiltRule = HiltAndroidRule(this)

    @get:Rule(order = 1)
    val composeRule = createAndroidComposeRule<MainActivity>()

    @ExperimentalAnimationApi
    @Before
    fun setup() {
        hiltRule.inject()
        composeRule.activity.setContent {
            JetpackCompose_NotesAppTheme {
                val navController = rememberNavController()
                NavHost(
                    navController = navController,
                    startDestination = Screen.NotesScreen.route
                ) {
                    composable(route = Screen.NotesScreen.route) {
                        NotesScreen(navController = navController)
                    }
                    composable(
                        route = Screen.AddEditNoteScreen.route + "?noteId={noteId}&noteColor={noteColor}",
                        arguments = listOf(
                            navArgument(
                                name = "noteId"
                            ) {
                                type = NavType.IntType
                                defaultValue = -1
                            },
                            navArgument(
                                name = "noteColor"
                            ) {
                                type = NavType.IntType
                                defaultValue = -1
                            },
                        )
                    ) {
                        val color = it.arguments?.getInt("noteColor") ?: -1
                        AddEditNoteScreen(
                            navController = navController,
                            noteColor = color
                        )
                    }
                }
            }
        }
    }


    @Test
    fun saveNewNote_editAfterwards() {

        // Click on FAB  to get tot add note screen
        composeRule.onNodeWithContentDescription("Add").performClick()

        // Enter texts in title and content text fields
        composeRule
            .onNodeWithTag(TestTags.TITLE_TEXT_FIELD)
            .performTextInput("test_title")
        composeRule
            .onNodeWithTag(TestTags.CONTENT_TEXT_FIELD)
            .performTextInput("test-content")

        // Save the new
        composeRule.onNodeWithContentDescription("Save").performClick()

////        // Make sure there is a note in the list with our title and content
//        composeRule.onNodeWithText("test-title", useUnmergedTree = true,ignoreCase = true).assertIsDisplayed()
//        // Click on note to edit it
//        composeRule.onNodeWithText("test-title").performClick()
//
//        // Make sure title and context text fields contain note title and content
//        composeRule
//            .onNodeWithTag(TestTags.TITLE_TEXT_FIELD)
//            .assertTextEquals("test-title")
//        composeRule
//            .onNodeWithTag(TestTags.CONTENT_TEXT_FIELD)
//            .assertTextEquals("test-content")
//        // Add the text "2" to the title text field
//        composeRule
//            .onNodeWithTag(TestTags.CONTENT_TEXT_FIELD)
//            .performTextInput("2")
//        // Update the note
//        composeRule.onNodeWithContentDescription("Save").performClick()
//
//        // Make sure the update was applied to the list
//        composeRule.onNodeWithText("test-title2").assertIsDisplayed()
    }

    @Test
    fun savedNewNotes_OrderByTitleDescending() {
        for (i in 1..3){
            composeRule.onNodeWithContentDescription("Add").performClick()

            // Enter texts in title and content text fields
            composeRule
                .onNodeWithTag(TestTags.TITLE_TEXT_FIELD)
                .performTextInput(i.toString())
            composeRule
                .onNodeWithTag(TestTags.CONTENT_TEXT_FIELD)
                .performTextInput(i.toString())

            // Save the new
            composeRule.onNodeWithContentDescription("Save").performClick()
        }

//        composeRule.onNodeWithText("1").assertIsDisplayed()
//        composeRule.onNodeWithText("2").assertIsDisplayed()
//        composeRule.onNodeWithText("3").assertIsDisplayed()

        composeRule
            .onNodeWithContentDescription("Menu")
            .performClick()
        composeRule
            .onNodeWithContentDescription("Title")
            .performClick()
        composeRule
            .onNodeWithContentDescription("Descending")
            .performClick()

        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[0]
            .assertTextContains("3")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[1]
            .assertTextContains("2")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[2]
            .assertTextContains("1")

    }



}
